--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <header class="site-header">
   <div class="title-wrap">
     <div class="mosquitoes" aria-hidden="true">
-      <img src="mosquito.png.jpg" class="mosq mosq1">
-      <img src="mosquito.png.jpg" class="mosq mosq2">
-      <img src="mosquito.png.jpg" class="mosq mosq3">
+      <img src="mosquito.png" class="mosq mosq1">
+      <img src="mosquito.png" class="mosq mosq2">
+      <img src="mosquito.png" class="mosq mosq3">
     </div>
     <h1 id="siteTitle">Dengue Awareness</h1>
   </div>
@@ -28,11 +28,13 @@
 </header>
 
 <main>
+  <!-- What is Dengue -->
   <section id="definition" class="card">
     <h2>What is Dengue?</h2>
-    <p>Dengue is a mosquito-borne viral infection caused by the bite of the <strong>Aedes aegypti</strong> mosquito. Severe dengue can be life-threatening and needs immediate medical care.</p>
+    <p>Dengue is a mosquito-borne viral infection caused by the bite of the Aedes aegypti mosquito. Severe dengue can be life-threatening.</p>
   </section>
 
+  <!-- Symptoms -->
   <section id="symptoms" class="card">
     <h2>Symptoms</h2>
     <ul>
@@ -43,29 +45,25 @@
       <li>Skin rash (2–5 days after fever starts)</li>
     </ul>
 
-    <h3>Organs Affected by Dengue</h3>
+    <h3>Organs Affected</h3>
     <div class="table-wrap">
       <table class="organs">
         <thead>
-          <tr>
-            <th>Organ</th>
-            <th>Normal Work</th>
-            <th>What Dengue Virus Does</th>
-            <th>What Problem Happens</th>
-          </tr>
+          <tr><th>Organ</th><th>Normal Work</th><th>What Dengue Virus Does</th><th>What Problem Happens</th></tr>
         </thead>
         <tbody>
-          <tr><td><strong>Liver</strong> 🟠</td><td>Cleans blood, makes proteins for clotting, helps digestion</td><td>Virus enters liver cells → immune attack → swelling → enzymes leak into blood</td><td>Poor cleaning, less clotting → <strong>bleeding risk, liver failure</strong></td></tr>
-          <tr><td><strong>Bone Marrow</strong> 🔴</td><td>Produces blood cells (RBC, WBC, Platelets)</td><td>Virus slows marrow → platelet production drops</td><td>Very <strong>low platelets</strong> → bleeding</td></tr>
-          <tr><td><strong>Blood Vessels</strong> 🔵</td><td>Carry blood safely without leakage</td><td>Virus weakens vessel walls → plasma leaks out</td><td>Blood pressure falls → organs don’t get oxygen → <strong>shock</strong></td></tr>
-          <tr><td><strong>Spleen</strong> 🟣</td><td>Filters blood, removes old cells, supports immunity</td><td>Becomes overworked and swells up</td><td>Pain, rare risk of <strong>rupture and bleeding</strong></td></tr>
-          <tr><td><strong>Brain</strong> 🟡</td><td>Controls body functions, memory, thinking</td><td>Sometimes swelling or small bleeding in brain tissue</td><td>Headache, confusion, seizures → <strong>unconsciousness</strong></td></tr>
-          <tr><td><strong>Heart</strong> 💚</td><td>Pumps blood to whole body</td><td>Virus may weaken heart muscles (myocarditis)</td><td>Weak pumping → fatigue, chest pain, breathlessness</td></tr>
+          <tr><td><strong>Liver</strong> 🟠</td><td>Cleans blood, makes proteins for clotting</td><td>Virus enters liver cells → inflammation</td><td><strong>Bleeding risk, liver failure</strong></td></tr>
+          <tr><td><strong>Bone Marrow</strong> 🔴</td><td>Produces blood cells</td><td>Virus slows bone marrow activity</td><td><strong>Low platelets → bleeding</strong></td></tr>
+          <tr><td><strong>Blood Vessels</strong> 🔵</td><td>Carry blood safely</td><td>Virus weakens vessel walls</td><td><strong>Shock (life-threatening)</strong></td></tr>
+          <tr><td><strong>Spleen</strong> 🟣</td><td>Filters blood, supports immunity</td><td>Swells and overworks</td><td><strong>Pain, bleeding</strong></td></tr>
+          <tr><td><strong>Brain</strong> 🟡</td><td>Controls body functions</td><td>Swelling or small bleeding</td><td><strong>Headache, seizures</strong></td></tr>
+          <tr><td><strong>Heart</strong> 💚</td><td>Pumps blood</td><td>May weaken heart muscles</td><td><strong>Fatigue, chest pain</strong></td></tr>
         </tbody>
       </table>
     </div>
   </section>
 
+  <!-- Prevention -->
   <section id="prevention" class="card">
     <h2>Prevention</h2>
     <ul>
@@ -74,47 +72,38 @@
       <li>Wear protective clothing</li>
       <li>Promote community awareness</li>
     </ul>
-  </section>
 
-  <section id="treatment" class="card">
-    <h2>Treatment & Care</h2>
+    <h3>Treatment & Care</h3>
     <div class="table-wrap">
       <table class="treatment">
         <thead>
-          <tr>
-            <th>Type</th>
-            <th>Treatment Step</th>
-            <th>What It Means</th>
-            <th>Why It Is Important</th>
-          </tr>
+          <tr><th>Type</th><th>Treatment Step</th><th>What It Means</th><th>Why It Is Important</th></tr>
         </thead>
         <tbody>
-          <tr><td>🏠 <strong>Home Remedies / Self-Care</strong></td><td><strong>Rest & Hydration</strong></td><td>Bed rest, drink lots of water, ORS, juices, coconut water</td><td>Prevents dehydration from fever and plasma leakage</td></tr>
-          <tr><td></td><td><strong>Fever Control</strong></td><td>Take <strong>Paracetamol</strong> only (avoid aspirin/ibuprofen)</td><td>Controls fever safely without increasing bleeding risk</td></tr>
-          <tr><td></td><td><strong>Nutrition</strong></td><td>Eat light, healthy food (fruits, porridge, vegetables, soups)</td><td>Helps recovery and boosts immunity</td></tr>
-          <tr><td></td><td><strong>Monitoring at Home</strong></td><td>Check temperature, watch for warning signs</td><td>Detects early danger signs so hospital care can be given quickly</td></tr>
-          <tr><td>🏥 <strong>Doctor / Hospital Care</strong></td><td><strong>Regular Blood Tests</strong></td><td>Platelet count & hematocrit monitoring</td><td>Detects risk of bleeding and shock early</td></tr>
-          <tr><td></td><td><strong>IV Fluids</strong></td><td>Intravenous fluids if patient is dehydrated or in shock</td><td>Maintains blood pressure and hydration</td></tr>
-          <tr><td></td><td><strong>Oxygen & Monitoring</strong></td><td>Patient kept under observation with oxygen support if needed</td><td>Prevents organ damage and shock</td></tr>
-          <tr><td></td><td><strong>Platelet / Blood Transfusion</strong></td><td>Given only if platelets are very low or severe bleeding</td><td>Saves life in critical dengue cases</td></tr>
+          <tr><td>🏠 <strong>Home Remedies</strong></td><td>Rest & Hydration</td><td>Drink water, juices, ORS</td><td>Prevents dehydration</td></tr>
+          <tr><td></td><td>Fever Control</td><td>Use <strong>Paracetamol</strong> only</td><td>Safe fever control</td></tr>
+          <tr><td></td><td>Nutrition</td><td>Eat light, healthy food</td><td>Boosts recovery</td></tr>
+          <tr><td>🏥 <strong>Doctor / Hospital</strong></td><td>Blood Tests</td><td>Monitor platelets</td><td>Detects early danger</td></tr>
+          <tr><td></td><td>IV Fluids</td><td>Maintain hydration</td><td>Prevents shock</td></tr>
+          <tr><td></td><td>Transfusion</td><td>Given only if bleeding</td><td>Saves life in severe cases</td></tr>
         </tbody>
       </table>
     </div>
   </section>
 
+  <!-- Charts -->
   <section id="charts" class="card">
     <h2>Visuals — Charts</h2>
     <div class="charts-row">
       <div class="chart-box small"><canvas id="pieChart" width="400" height="300"></canvas></div>
       <div class="chart-box large"><canvas id="barChart" width="600" height="300"></canvas></div>
     </div>
-    <div class="line-chart"><canvas id="lineChart" width="1000" height="200"></canvas></div>
-    <div class="controls">
-      <label for="yearSelect">Select Year:</label>
-      <select id="yearSelect"></select>
+    <div class="line-chart">
+      <canvas id="lineChart" width="1000" height="200"></canvas>
     </div>
   </section>
 
+  <!-- End Button -->
   <section id="final" class="card center">
     <button id="endBtn" class="end-btn">DOT</button>
     <div id="goodbye" class="goodbye"><span>🦟 Take care of yourself</span></div>
@@ -127,86 +116,76 @@
 <script>
 document.querySelectorAll('.nav button').forEach(btn=>{
   btn.addEventListener('click',()=>{
-    const id=btn.dataset.target;
-    document.getElementById(id).scrollIntoView({behavior:'smooth'});
+    const target=document.getElementById(btn.dataset.target);
+    if(target) target.scrollIntoView({behavior:'smooth'});
   });
 });
 
-// Mosquito motion
+// Mosquito movement
 function animateMosquito(sel,speed,rx,ry,phase){
-  const el=document.querySelector(sel);
-  let t=phase;
-  (function step(){
-    t+=speed;
+  const el=document.querySelector(sel);let t=phase;
+  function step(){t+=speed;
     const x=rx*Math.cos(t),y=ry*Math.sin(2*t);
     el.style.transform=`translate(${x}px,${y}px) rotate(${10*Math.sin(3*t)}deg)`;
     requestAnimationFrame(step);
-  })();
+  }step();
 }
-animateMosquito('.mosq1',.01,60,15,0);
-animateMosquito('.mosq2',.012,80,20,1.3);
-animateMosquito('.mosq3',.009,50,12,2.1);
+animateMosquito('.mosq1',.012,60,15,0);
+animateMosquito('.mosq2',.014,70,18,1.5);
+animateMosquito('.mosq3',.010,80,20,2.5);
 
 // Charts
-const yearSelect=document.getElementById('yearSelect');
 availableYears.forEach(y=>{
   const opt=document.createElement('option');
   opt.value=y; opt.textContent=y;
-  yearSelect.appendChild(opt);
 });
-yearSelect.value=Math.max(...availableYears);
 
 let pieChart,barChart,lineChart;
 function drawAll(year){
-  const entries=Object.keys(dengueDataAllStates).map(s=>({
-    state:s,
-    cases:dengueDataAllStates[s][year].cases,
-    deaths:dengueDataAllStates[s][year].deaths
-  }));
+  var yearStr=String(year);
+  var entries=Object.keys(dengueDataAllStates).map(s=>{
+    return {state:s,cases:dengueDataAllStates[s][yearStr].cases,deaths:dengueDataAllStates[s][yearStr].deaths};
+  });
   entries.sort((a,b)=>b.cases-a.cases);
-  const top10=entries.slice(0,10);
-  const labels=top10.map(e=>e.state);
-  const values=top10.map(e=>e.cases);
+  var top10=entries.slice(0,10);
+  var labels=top10.map(e=>e.state);
+  var vals=top10.map(e=>e.cases);
 
   const pctx=document.getElementById('pieChart').getContext('2d');
   if(pieChart) pieChart.destroy();
-  pieChart=new Chart(pctx,{type:'pie',data:{
-    labels:labels,
-    datasets:[{data:values,backgroundColor:labels.map((_,i)=>`hsl(${i*36},70%,55%)`)}]},
+  pieChart=new Chart(pctx,{
+    type:'pie',
+    data:{labels:labels,datasets:[{data:vals,backgroundColor:labels.map((l,i)=>`hsl(${i*36},70%,50%)`)}]},
     options:{plugins:{legend:{position:'bottom'}}}
   });
 
   const bctx=document.getElementById('barChart').getContext('2d');
   if(barChart) barChart.destroy();
-  const sums=availableYears.map(y=>Object.values(dengueDataAllStates).reduce((a,s)=>a+s[y].cases,0));
-  barChart=new Chart(bctx,{type:'bar',data:{labels:availableYears,datasets:[{label:'Total Cases',data:sums,backgroundColor:'rgba(46,204,113,0.7)'}]},
+  const years=availableYears;
+  const sums=years.map(y=>Object.keys(dengueDataAllStates).reduce((a,s)=>a+dengueDataAllStates[s][String(y)].cases,0));
+  barChart=new Chart(bctx,{
+    type:'bar',
+    data:{labels:years.map(String),datasets:[{label:'Total Dengue Cases (India)',data:sums,backgroundColor:'rgba(46,204,113,0.7)'}]},
     options:{plugins:{legend:{display:false}},scales:{y:{title:{display:true,text:'Cases'}}}}
   });
 
   const lctx=document.getElementById('lineChart').getContext('2d');
   if(lineChart) lineChart.destroy();
-  const deaths=availableYears.map(y=>Object.values(dengueDataAllStates).reduce((a,s)=>a+s[y].deaths,0));
-  lineChart=new Chart(lctx,{type:'line',data:{labels:availableYears,datasets:[{label:'Deaths',data:deaths,borderColor:'#e74c3c',tension:0.3}]},
+  const deaths=years.map(y=>Object.keys(dengueDataAllStates).reduce((a,s)=>a+dengueDataAllStates[s][String(y)].deaths,0));
+  lineChart=new Chart(lctx,{
+    type:'line',
+    data:{labels:years.map(String),datasets:[{label:'Deaths',data:deaths,borderColor:'#e74c3c',tension:0.3}]},
     options:{plugins:{legend:{display:false}},scales:{y:{title:{display:true,text:'Deaths'}}}}
   });
 }
-drawAll(yearSelect.value);
-yearSelect.addEventListener('change',()=>drawAll(yearSelect.value));
+drawAll(2025);
 
-// DOT button
+// End button animation
 const endBtn=document.getElementById('endBtn');
 const goodbye=document.getElementById('goodbye');
 endBtn.addEventListener('click',()=>{
-  for(let i=0;i<3;i++){
-    const el=document.createElement('img');
-    el.src='mosquito.png.jpg';
-    el.className='mosq fly'+i;
-    document.body.appendChild(el);
-    setTimeout(()=>el.classList.add('toCenter'),i*300);
-    setTimeout(()=>{el.classList.add('fadeout');setTimeout(()=>el.remove(),2000);},5000);
-  }
   goodbye.classList.add('show');
-  setTimeout(()=>goodbye.classList.remove('show'),5500);
+  setTimeout(()=>goodbye.classList.remove('show'),5000);
 });
 </script>
 </body>
