--- a/index.html
+++ b/index.html
@@ -1,192 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Dengue Awareness</title>
-<link rel="stylesheet" href="style.css">
-<link rel="icon" href="data:,">
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
-<body>
-<header class="site-header">
-  <div class="title-wrap">
-    <div class="mosquitoes" aria-hidden="true">
-      <img src="mosquito.png" class="mosq mosq1">
-      <img src="mosquito.png" class="mosq mosq2">
-      <img src="mosquito.png" class="mosq mosq3">
-    </div>
-    <h1 id="siteTitle">Dengue Awareness</h1>
-  </div>
-  <div class="nav">
-    <button data-target="definition">What is Dengue?</button>
-    <button data-target="symptoms">Symptoms</button>
-    <button data-target="prevention">Prevention</button>
-    <button data-target="treatment">Treatment</button>
-    <button data-target="charts">Visuals of Data</button>
-  </div>
-</header>
-
-<main>
-  <!-- What is Dengue -->
-  <section id="definition" class="card">
-    <h2>What is Dengue?</h2>
-    <p>Dengue is a mosquito-borne viral infection caused by the bite of the Aedes aegypti mosquito. Severe dengue can be life-threatening.</p>
-  </section>
-
-  <!-- Symptoms -->
-  <section id="symptoms" class="card">
-    <h2>Symptoms</h2>
-    <ul>
-      <li>High fever</li>
-      <li>Severe headache</li>
-      <li>Muscle and joint pains</li>
-      <li>Nausea and vomiting</li>
-      <li>Skin rash (2–5 days after fever starts)</li>
-    </ul>
-
-    <h3>Organs Affected</h3>
-    <div class="table-wrap">
-      <table class="organs">
-        <thead>
-          <tr><th>Organ</th><th>Normal Work</th><th>What Dengue Virus Does</th><th>What Problem Happens</th></tr>
-        </thead>
-        <tbody>
-          <tr><td><strong>Liver</strong> 🟠</td><td>Cleans blood, makes proteins for clotting</td><td>Virus enters liver cells → inflammation</td><td><strong>Bleeding risk, liver failure</strong></td></tr>
-          <tr><td><strong>Bone Marrow</strong> 🔴</td><td>Produces blood cells</td><td>Virus slows bone marrow activity</td><td><strong>Low platelets → bleeding</strong></td></tr>
-          <tr><td><strong>Blood Vessels</strong> 🔵</td><td>Carry blood safely</td><td>Virus weakens vessel walls</td><td><strong>Shock (life-threatening)</strong></td></tr>
-          <tr><td><strong>Spleen</strong> 🟣</td><td>Filters blood, supports immunity</td><td>Swells and overworks</td><td><strong>Pain, bleeding</strong></td></tr>
-          <tr><td><strong>Brain</strong> 🟡</td><td>Controls body functions</td><td>Swelling or small bleeding</td><td><strong>Headache, seizures</strong></td></tr>
-          <tr><td><strong>Heart</strong> 💚</td><td>Pumps blood</td><td>May weaken heart muscles</td><td><strong>Fatigue, chest pain</strong></td></tr>
-        </tbody>
-      </table>
-    </div>
-  </section>
-
-  <!-- Prevention -->
-  <section id="prevention" class="card">
-    <h2>Prevention</h2>
-    <ul>
-      <li>Use mosquito repellents and nets</li>
-      <li>Eliminate stagnant water</li>
-      <li>Wear protective clothing</li>
-      <li>Promote community awareness</li>
-    </ul>
-
-    <h3>Treatment & Care</h3>
-    <div class="table-wrap">
-      <table class="treatment">
-        <thead>
-          <tr><th>Type</th><th>Treatment Step</th><th>What It Means</th><th>Why It Is Important</th></tr>
-        </thead>
-        <tbody>
-          <tr><td>🏠 <strong>Home Remedies</strong></td><td>Rest & Hydration</td><td>Drink water, juices, ORS</td><td>Prevents dehydration</td></tr>
-          <tr><td></td><td>Fever Control</td><td>Use <strong>Paracetamol</strong> only</td><td>Safe fever control</td></tr>
-          <tr><td></td><td>Nutrition</td><td>Eat light, healthy food</td><td>Boosts recovery</td></tr>
-          <tr><td>🏥 <strong>Doctor / Hospital</strong></td><td>Blood Tests</td><td>Monitor platelets</td><td>Detects early danger</td></tr>
-          <tr><td></td><td>IV Fluids</td><td>Maintain hydration</td><td>Prevents shock</td></tr>
-          <tr><td></td><td>Transfusion</td><td>Given only if bleeding</td><td>Saves life in severe cases</td></tr>
-        </tbody>
-      </table>
-    </div>
-  </section>
-
-  <!-- Charts -->
-  <section id="charts" class="card">
-    <h2>Visuals — Charts</h2>
-    <div class="charts-row">
-      <div class="chart-box small"><canvas id="pieChart" width="400" height="300"></canvas></div>
-      <div class="chart-box large"><canvas id="barChart" width="600" height="300"></canvas></div>
-    </div>
-    <div class="line-chart">
-      <canvas id="lineChart" width="1000" height="200"></canvas>
-    </div>
-  </section>
-
-  <!-- End Button -->
-  <section id="final" class="card center">
-    <button id="endBtn" class="end-btn">DOT</button>
-    <div id="goodbye" class="goodbye"><span>🦟 Take care of yourself</span></div>
-  </section>
-</main>
-
-<footer class="site-footer"><p>© 2025 Dengue Awareness</p></footer>
-
-<script src="data.js"></script>
-<script>
-document.querySelectorAll('.nav button').forEach(btn=>{
-  btn.addEventListener('click',()=>{
-    const target=document.getElementById(btn.dataset.target);
-    if(target) target.scrollIntoView({behavior:'smooth'});
-  });
-});
-
-// Mosquito movement
-function animateMosquito(sel,speed,rx,ry,phase){
-  const el=document.querySelector(sel);let t=phase;
-  function step(){t+=speed;
-    const x=rx*Math.cos(t),y=ry*Math.sin(2*t);
-    el.style.transform=`translate(${x}px,${y}px) rotate(${10*Math.sin(3*t)}deg)`;
-    requestAnimationFrame(step);
-  }step();
-}
-animateMosquito('.mosq1',.012,60,15,0);
-animateMosquito('.mosq2',.014,70,18,1.5);
-animateMosquito('.mosq3',.010,80,20,2.5);
-
-// Charts
-availableYears.forEach(y=>{
-  const opt=document.createElement('option');
-  opt.value=y; opt.textContent=y;
-});
-
-let pieChart,barChart,lineChart;
-function drawAll(year){
-  var yearStr=String(year);
-  var entries=Object.keys(dengueDataAllStates).map(s=>{
-    return {state:s,cases:dengueDataAllStates[s][yearStr].cases,deaths:dengueDataAllStates[s][yearStr].deaths};
-  });
-  entries.sort((a,b)=>b.cases-a.cases);
-  var top10=entries.slice(0,10);
-  var labels=top10.map(e=>e.state);
-  var vals=top10.map(e=>e.cases);
-
-  const pctx=document.getElementById('pieChart').getContext('2d');
-  if(pieChart) pieChart.destroy();
-  pieChart=new Chart(pctx,{
-    type:'pie',
-    data:{labels:labels,datasets:[{data:vals,backgroundColor:labels.map((l,i)=>`hsl(${i*36},70%,50%)`)}]},
-    options:{plugins:{legend:{position:'bottom'}}}
-  });
-
-  const bctx=document.getElementById('barChart').getContext('2d');
-  if(barChart) barChart.destroy();
-  const years=availableYears;
-  const sums=years.map(y=>Object.keys(dengueDataAllStates).reduce((a,s)=>a+dengueDataAllStates[s][String(y)].cases,0));
-  barChart=new Chart(bctx,{
-    type:'bar',
-    data:{labels:years.map(String),datasets:[{label:'Total Dengue Cases (India)',data:sums,backgroundColor:'rgba(46,204,113,0.7)'}]},
-    options:{plugins:{legend:{display:false}},scales:{y:{title:{display:true,text:'Cases'}}}}
-  });
-
-  const lctx=document.getElementById('lineChart').getContext('2d');
-  if(lineChart) lineChart.destroy();
-  const deaths=years.map(y=>Object.keys(dengueDataAllStates).reduce((a,s)=>a+dengueDataAllStates[s][String(y)].deaths,0));
-  lineChart=new Chart(lctx,{
-    type:'line',
-    data:{labels:years.map(String),datasets:[{label:'Deaths',data:deaths,borderColor:'#e74c3c',tension:0.3}]},
-    options:{plugins:{legend:{display:false}},scales:{y:{title:{display:true,text:'Deaths'}}}}
-  });
-}
-drawAll(2025);
-
-// End button animation
-const endBtn=document.getElementById('endBtn');
-const goodbye=document.getElementById('goodbye');
-endBtn.addEventListener('click',()=>{
-  goodbye.classList.add('show');
-  setTimeout(()=>goodbye.classList.remove('show'),5000);
-});
-</script>
-</body>
-</html>
+<!-- Final HTML will go here -->
